# representation-engineering

./: .gitignore  README.md  pyproject.toml  setup.py
data/emotions/: all_truncated_outputs.json  anger.json  disgust.json  fear.json  happiness.json  happiness_fear.json  happiness_sadness.json  sadness.json  surprise.json
data/facts/: facts_true_false.csv
examples/: README.md
examples/fairness/: README.md  fairness.ipynb  utils.py
examples/harmless_harmful/: harmless_llama2.ipynb
examples/honesty/: README.md  honesty.ipynb  honesty_contrast_vec_TQA_generation.ipynb  honesty_contrast_vec_TQA_mc.ipynb  honesty_control_TQA.ipynb  honesty_mistral.ipynb  model.py  utils.py
examples/languages/: vn_llama3.ipynb
examples/memorization/: README.md  quote_completions_control.ipynb  utils.py
examples/primary_emotions/: README.md  emotion.ipynb  emotion_concept.ipynb  emotion_function.ipynb  utils.py
examples/self_awareness/: self_concept.ipynb  utils.py
lorra_finetune/configs/: ds.json  ds_zero0.json  ds_zero1.json  ds_zero2.json  ds_zero3.json
lorra_finetune/scripts/: launch_lorra.sh  llama_lorra_power_7b.sh  llama_lorra_tqa_13b.sh  llama_lorra_tqa_7b.sh  slurm-lorra_tqa_13b-927237.out  slurm-lorra_tqa_7b-927238.out
lorra_finetune/src/: args.py  llama2_lorra.py  train_val_datasets.py
repe/: __init__.py  pipelines.py  rep_control_contrast_vec.py  rep_control_pipeline.py  rep_control_reading_vec.py  rep_readers.py  rep_reading_pipeline.py
repe_eval/: README.md  honesty_analysis_control.py  rep_reading_eval.py  tqa_analysis_read_control.py
(+17 files in other folders)
