[tool.poetry]
name = "repe"
version = "0.1.0"
description = "Representation Engineering: A Top-Down Approach to AI Transparency "
authors = ["andyzoujm"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
transformers = "^4.34.1"
numpy = "^1.26.1"
matplotlib = "^3.8.0"
datasets = "^2.14.5"
scikit-learn = "^1.3.1"
seaborn = "^0.13.0"
torch = {version = "^2.1.0+cu118", source = "pytorch"}
# auto-gptq = "^0.4.2"
# optimum = "^1.13.2"
# accelerate = "^0.23.0"

[[tool.poetry.source]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu118"
priority = "explicit"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.25.2"
black = "^23.10.0"
pylama = "^8.4.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
